add csrf token in templates, get time periods from DB model Order

--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -9,6 +9,7 @@
   		<div class="catalog">
   			<div class="title">Все букеты</div>
   			<div class="catalog__block">
+				{% csrf_token %}
 				{% for bouquets_row in bouquets_rows %}
   				<div class="recommended__elems ficb">
 					{% for bouquet in bouquets_row.bouquets_row %}
