--- a/templates/delivery.html
+++ b/templates/delivery.html
@@ -17,31 +17,13 @@
   							<input type="text" name="adres" class="order__form_input" placeholder="Адрес доставки" required>
   						</div>
   						<div class="order__form_btns fic">
+							{% csrf_token %}
+							{% for time_period in time_periods %}
   							<div class="order__form_radioBlock ">
-  								<input type="radio" name="orderTime" id="radio1" value="Как можно скорее" class="order__form_radio" />
-  								<label for="radio1" class="radioLable">Как можно скорее</label>
+  								<input type="radio" name="orderTime" id="radio{{ time_period.id }}" value="{{ time_period.text }}" class="order__form_radio" />
+  								<label for="radio{{ time_period.id }}" class="radioLable">{{ time_period.text }}</label>
   							</div>
-  							<div class="order__form_radioBlock">
-  								<input type="radio" name="orderTime" id="radio2" value="с 10:00 до 12:00" class="order__form_radio" />
-  								<label for="radio2" class="radioLable">с 10:00 до 12:00</label>
-  							</div>
-  							<div class="order__form_radioBlock">
-  								<input type="radio" name="orderTime" id="radio3" value="с 12:00 до 14:00" class="order__form_radio" />
-  								<label for="radio3" class="radioLable">с 12:00 до 14:00</label>
-  							</div>
-  							<div class="order__form_radioBlock">
-  								<input type="radio" name="orderTime" id="radio4" value="с 14:00 до 16:00" class="order__form_radio" />
-  								<label for="radio4" class="radioLable">с 14:00 до 16:00</label>
-  							</div>
-  							<div class="order__form_radioBlock">
-  								<input type="radio" name="orderTime" id="radio5" value="с 16:00 до 18:00" class="order__form_radio" />
-  								<label for="radio5" class="radioLable">с 16:00 до 18:00</label>
-  							</div>
-  							<div class="order__form_radioBlock">
-  								<input type="radio" name="orderTime" id="radio6" value="с 18:00 до 20:00" class="order__form_radio" />
-  								<label for="radio6" class="radioLable">с 18:00 до 20:00</label>
-  							</div>
-  							
+							{% endfor %}
   						</div>
   						<div class="order__form_line"></div>
   						<div class="order__form_btns ficb">
