--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,7 @@
         <div class="recommended p100">
             <div class="title">Рекомендуем</div>
             <div class="recommended__elems ficb">
+            {% csrf_token %}
             {% for bouquet in bouquets_recommended %}
                 <div class="recommended__block" style='background-image: url("{% get_media_prefix %}{{ bouquet.picture }}"); background-size: contain;'>
                     <div class="recommended__block_elems ficb">
